First commit to get environment and bounding boxes working

--- a/resize.ipynb
+++ b/resize.ipynb
@@ -31,16 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SZ = 224"
+    "#KL: started at resize of 224, trying 448\n",
+    "SZ = 448"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,27 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4min 38s, sys: 10.8 s, total: 4min 48s\n",
-      "Wall time: 34.3 s\n"
+      "CPU times: user 23min 38s, sys: 8.8 s, total: 23min 47s\n",
+      "Wall time: 3min 1s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "files = list((PATH/'train').iterdir()) + list((PATH/'test').iterdir())\n",
-    "with ThreadPoolExecutor(12) as e: e.map(resize_img, files)"
+    "with ThreadPoolExecutor(8) as e: e.map(resize_img, files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +108,7 @@
        "(25361, 7960)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +128,7 @@
        "(25361, 7960)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,6 +136,13 @@
    "source": [
     "len(list((PATH/f'train').iterdir())), len(list((PATH/f'test').iterdir()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -153,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
